fixed content spacing

--- a/_sass/_result.sass
+++ b/_sass/_result.sass
@@ -5,6 +5,10 @@ $resultHeight: 16em
   margin: 3em auto 0em auto
   padding-bottom: 3em
   padding-top: 2em
+  max-width: 1200px
+  margin: 0 auto
+  padding: 2em 2em
+  clear: both
 
 .result
   display: inline-block
