--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -328,11 +328,8 @@ footer
   i
     font-size: 12px
 .filters-all
-  background: $altColor
   color: #fff
-  //padding: 1em 0
   button
-    //background: #fff
     color: $white
     margin: 0 0.25em 0.5em 0.25em
     &:hover
@@ -382,7 +379,7 @@ footer
 
 .search-wrapper
   position: relative
-  //margin: 0 0 2em 0
+  margin-left: 2em
   .toggle-filters 
     position: absolute
     color: #fff
@@ -403,6 +400,10 @@ footer
 .filters-all-content
   display: none //this determines whether the filters show by default or not
   padding: 1em 0
+  max-width: 1200px
+  margin: 0 auto
+  padding: 0 2em
+  clear: both
   > .filters:first-child
     margin-top: 1em
 .filters-controls
